MD Settings: chrome.settingsPrivate, fix rounding error.

BUG=652483

Review-Url: https://codereview.chromium.org/2409753003
Cr-Commit-Position: refs/heads/master@{#425552}

Former-commit-id: 6a3ab25a3152c4ab095c78347c70fe082f6a1743